# secret-manager-rs

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/workflows/: publish.yml
src/: aws_kms_encryptor.rs  backend.rs  diesel_pg_backend.rs  encryptor.rs  lib.rs  local_encryptor.rs  manager.rs  no_op_encryptor.rs  pg_backend.rs  pg_queries.rs  rotator.rs  secret_rotation.rs  sqlx_pg_backend.rs  syncer.rs  util.rs
tests/diesel-migrations/00000000000000_create_secret_keys/: up.sql
